<resources>
    <string name="app_name">Solidot</string>

    <string name="navigation_drawer_open">Open Sidebar</string>
    <string name="navigation_drawer_close">Close Sidebar</string>

    <string name="action_settings">Settings</string>
    <string name="menu_nav_home">Latest</string>
    <string name="rssurl">http://www.solidot.org/index.rss</string>
    <string name="rss2url">http://feeds2.feedburner.com/solidot</string>
    <string name="publishedat"> Published at　</string>
    <string name="from">from　</string>
    <string name="department">　department </string>
    <string name="share_this_app">App Sharing</string>
    <string name="this_app">App</string>
    <string name="about">About</string>
    <string name="action_share">Share</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="action_refresh">Reload</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->
    <!-- Example General settings -->
    <string name="pref_header_general">Source</string>

    <string name="pref_title_alternative_feed">Use feedburner</string>
    <string name="pref_description_alternative_feed">Use feedburner outside of China</string>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>12 hours</item>
        <item>24 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>720</item>
        <item>1440</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notification</string>

    <string name="pref_title_new_message_notifications">Notification sound for new post</string>

    <string name="pref_title_ringtone">Sound</string>
    <string name="pref_ringtone_silent">Mute</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="share_via">Sharing…</string>
    <string name="share_thisapptext">Try Solidot for Android https://goo.gl/mGewiB </string>
    <string name="share_thisappsubject">Solidot</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="pref_feed_select_key">pref_feed_select_key</string>
    <string name="submiturl">http://www.solidot.org/submit</string>
    <string name="submit">Submit</string>
    <string name="keywords_key">keyword_key</string>
    <string name="keywords_hint">regex</string>
    <string name="pref_default_keywords">.*</string>
    <string name="pref_keywords_display_name">Keywords</string>
    <string name="solidot">Solidot</string>
    <string name="notifications_new_message_key">notifications_new_message_key</string>
    <string name="notifications_new_message_ringtone_key">notifications_new_message_ringtone_key</string>
    <string name="notifications_new_message_vibrate_key">notifications_new_message_vibrate_key</string>
    <string name="sync_frequency_key">sync_frequency_key</string>
    <string name="illegalregex">Illegal regex</string>
    <string name="slogan">Info for Geeks, Important things </string>
    <string name="share_via_surfix">( via Solidot for Android https://goo.gl/mGewiB )</string>
    <string name="notification">notification</string>
    <string name="exitconfirm">Please click BACK again to exit</string>>
</resources>
