<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@mipmap/ic_storage_grey"
            android:title="@string/menu_nav_home" />
        <!--item
            android:id="@+id/nav_camera"
            android:icon="@drawable/ic_menu_camera"
            android:title="Import" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="Gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="Slideshow" /-->
        <item
            android:id="@+id/nav_settings"
            android:icon="@mipmap/ic_settings"
            android:title="@string/action_settings" />
    </group>

    <item android:title="@string/this_app">
        <menu>
            <item
                android:id="@+id/nav_share_this_app"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/share_this_app" />
            <item
                android:id="@+id/nav_about"
                android:icon="@mipmap/ic_star_black"
                android:title="@string/about" />
        </menu>
    </item>

</menu>
